5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1679_1872.log
== SUBMITION (2019-05-02 10:14:06) 
-- CODE:
x=int(print("x: "))
y=int(print("y: "))

if (x==0)and(y==0):
	print("origem")
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")
else:
	
		
-- EXECUTION TIME:
0.175532
-- ERROR:
  File "/home/codebench/codes/1679/1872/main.py", line 21
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:14:06) 
-- CODE:
x=int(print("x: "))
y=int(print("y: "))

if (x==0)and(y==0):
	print("origem")
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")
else:
	
		
-- ERROR:
File "XXXX", line 21
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:14:22) 
-- CODE:
x=int(print("x: "))
y=int(print("y: "))

if (x==0)and(y==0):
	print("origem")
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")

	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(print("x: "))
TypeError: int() argument must be a string, a bytes-like object or a number, not 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:14:54) 
-- CODE:
x=int(input("x: "))
y=int(input("y: "))

if (x==0)and(y==0):
	print("origem")
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")

	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:15:47) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)and(y==0):
	print("origem")
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")

	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:03) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:19:09) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.163863
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo X
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:13) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:35) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:19:50) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:04) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y>0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- OUTPUT:
Eixo X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:24) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo X")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:20:57) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:21:11) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:22) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.204557
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:27) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.211038
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:27) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.2347
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo X
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:27) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.407863
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:28) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.528072
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:28) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.581353
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo X
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo X
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:28) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.34867
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:28) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.585143
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Q4
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo X
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:29) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.44074
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo X
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
origem
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:29) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.32288
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo X
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
origem
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:29) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.138332
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:30) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.47417
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1679/1872/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:30) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.396628
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:30) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.293913
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
origem
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Eixo X
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:31) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.507195
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
origem
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Q4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:31) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.604373
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:31) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.644021
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
origem
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:31) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.280141
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:31) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.553666
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo X
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:31) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("origem")

	
		
-- EXECUTION TIME:
0.529411
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Eixo X
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:

-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:21:52) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if (x==0)or(y==0)or(x>0)or(x<0)or(y>0)or(y>0):
	if(y>0)and(x>0):
		print("Q1")
	elif(x<0)and(y>0):
		print("Q2")
	elif(x<0)and(y<0):
		print("Q3")
	elif(x>0)and(y<0):
		print("Q4")
	elif(x>0)or(x<0)and(y==0):
		print("Eixo X")	
	elif(x==0)and(y>0)or(y<0):
		print("Eixo Y")
	elif(x==0)and(y==0):
		print("Origem")

	
		
-- EXECUTION TIME:
0.118658
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
